thêm dòng "chó an" lên đầu

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+chó an
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +10,8 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Vidaloka' rel='stylesheet' type='text/css'>
   </head>
   <body>
    	<div id="header">
@@ -60,6 +63,7 @@
 	</div>	<!-- #header -->
 
 	<div id="content">
+
 		<div id="slider">
     		<div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel">
 					<!-- Indicators -->
@@ -92,142 +96,128 @@
 					<span class="sr-only">Next</span>
 					</a>
 			</div>
-  		</div>
+  		</div><!--#slider-->
 
-		<!--- gallery --->
 		<div id="feature3">
 			<div class="row">
 				<div class="catelogy-gallery col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			    <div class="hovereffect">
-		        <img class="img-responsive" src="image/catelory_gallery_cuoi_hoi.jpg" alt="">
-	            <div class="overlay">
-                <h2>CƯỚI - HỎI</h2>
-								<p> 
-									<a href="#">XEM THÊM</a>
-								</p> 
-            </div>
-			    </div>
+			    	<div class="hovereffect">
+		        		<img class="img-responsive" src="image/catelory_gallery_cuoi_hoi.jpg" alt="">
+	            		<div class="overlay">
+                			<h2>CƯỚI HỎI</h2>
+							<p><a href="#">XEM THÊM</a></p> 
+            			</div>
+			    	</div>
 				</div>
+
 				<div class="catelogy-gallery col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			    <div class="hovereffect">
-		        <img class="img-responsive" src="image/catelory_gallery_nghe_thuat.jpg" alt="">
-	            <div class="overlay">
-                <h2>NGHỆ THUẬT</h2>
-								<p> 
-									<a href="#">XEM THÊM</a>
-								</p> 
-            </div>
-			    </div>
+			    	<div class="hovereffect">
+		        		<img class="img-responsive" src="image/catelory_gallery_nghe_thuat.jpg" alt="">
+	            		<div class="overlay">
+                			<h2>NGHỆ THUẬT</h2>
+							<p><a href="#">XEM THÊM</a></p> 
+            			</div>
+			    	</div>
 				</div>
+
 				<div class="catelogy-gallery col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			    <div class="hovereffect">
-		        <img class="img-responsive" srcage"image/catelory_gallery_flycam.jpg" alt="">
-	            <div class="overlay">
-                <h2>FLYCAM</h2>
-								<p> 
-									<a href="#">XEM THÊM</a>
-								</p> 
-            </div>
-			    </div>
+			    	<div class="hovereffect">
+		        		<img class="img-responsive" src="image/catelory_gallery_flycam.jpg" alt="">
+	            		<div class="overlay">
+                			<h2>FLYCAM</h2>
+							<p><a href="#">XEM THÊM</a></p> 
+            			</div>
+			    	</div>
 				</div>
+
 				<div class="catelogy-gallery col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			    <div class="hovereffect">
-		        <img class="img-responsive" srage="image/catelory_gallery_macro.jpg" alt="">
-	            <div class="overlay">
-                <h2>MACRO - TĨNH VẬT - SẢN PHẨM</h2>
-								<p> 
-									<a href="#">XEM THÊM</a>
-								</p> 
-            </div>
-			    </div>
+			    	<div class="hovereffect">
+		        		<img class="img-responsive" src="image/catelory_gallery_macro.jpg" alt="">
+	            		<div class="overlay">
+                			<h2>MACRO - TĨNH VẬT - SẢN PHẨM</h2>
+							<p><a href="#">XEM THÊM</a></p> 
+            			</div>
+			    	</div>
 				</div>
+				
 				<div class="catelogy-gallery col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			    <div class="hovereffect">
-		        <img class="img-responsive" srcage"image/catelory_gallery_ky_yeu.jpg" alt="">
-	            <div class="overlay">
-                <h2>KỶ YẾU</h2>
-								<p> 
-									<a href="#">XEM THÊM</a>
-								</p> 
-            </div>
-			    </div>
+			    	<div class="hovereffect">
+		        		<img class="img-responsive" src="image/catelory_gallery_ky_yeu.jpg" alt="">
+	            		<div class="overlay">
+                			<h2>KỶ YẾU</h2>
+							<p><a href="#">XEM THÊM</a></p> 
+            			</div>
+			    	</div>
 				</div>
+
 				<div class="catelogy-gallery col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			    <div class="hovereffect">
-		        <img class="img-responsive" src="image/catelory_gallery_street_life.jpg" alt="">
-	            <div class="overlay">
-                <h2>STREET LIFE</h2>
-								<p> 
-									<a href="#">XEM THÊM</a>
-								</p> 
-            </div>
-			    </div>
+			    	<div class="hovereffect">
+		        		<img class="img-responsive" src="image/catelory_gallery_street_life.jpg" alt="">
+	            		<div class="overlay">
+                			<h2>STREET LIFE</h2>
+							<p><a href="#">XEM THÊM</a></p> 
+            			</div>
+			    	</div>
 				</div>
+
 				<div class="catelogy-gallery col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			    <div class="hovereffect">
-		        <img class="img-responsive" src="image/catelory_gallery_su_kien.jpg" alt="">
-	            <div class="overlay">
-                <h2>SỰ KIỆN</h2>
-								<p> 
-									<a href="#">XEM THÊM</a>
-								</p> 
-            </div>
-			    </div>
+			    	<div class="hovereffect">
+		        		<img class="img-responsive" src="image/catelory_gallery_su_kien.jpg" alt="">
+	            		<div class="overlay">
+                			<h2>SỰ KIỆN</h2>
+							<p><a href="#">XEM THÊM</a></p> 
+            			</div>
+			    	</div>
 				</div>
+
 				<div class="catelogy-gallery col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			    <div class="hovereffect">
-		        <img class="img-responsive" src="image/catelory_gallery_gia_dinh.jpg" alt="">
-	            <div class="overlay">
-                <h2>GIA ĐÌNH</h2>
-								<p> 
-									<a href="#">XEM THÊM</a>
-								</p> 
-            </div>
-			    </div>
+			    	<div class="hovereffect">
+		        		<img class="img-responsive" src="image/catelory_gallery_gia_dinh.jpg" alt="">
+	            		<div class="overlay">
+                			<h2>GIA ĐÌNH</h2>
+							<p><a href="#">XEM THÊM</a></p> 
+            			</div>
+			    	</div>
 				</div>
+
 				<div class="catelogy-gallery col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			    <div class="hovereffect">
-		        <img class="img-responsive" src="image/catelory_gallery_ngoai_canh.jpg" alt="">
-	            <div class="overlay">
-                <h2>NGOẠI CẢNH</h2>
-								<p> 
-									<a href="#">XEM THÊM</a>
-								</p> 
-            </div>
-			    </div>
+			    	<div class="hovereffect">
+		        		<img class="img-responsive" src="image/catelory_gallery_ngoai_canh.jpg" alt="">
+	            		<div class="overlay">
+                			<h2>NGOẠI CẢNH</h2>
+							<p><a href="#">XEM THÊM</a></p> 
+            			</div>
+			    	</div>
 				</div>
+
 				<div class="catelogy-gallery col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			    <div class="hovereffect">
-		        <img class="img-responsive" src="image/catelory_gallery_phong_canh.jpg" alt="">
-	            <div class="overlay">
-                <h2>PHONG CẢNH</h2>
-								<p> 
-									<a href="#">XEM THÊM</a>
-								</p> 
-            </div>
-			    </div>
+			    	<div class="hovereffect">
+		        		<img class="img-responsive" src="image/catelory_gallery_phong_canh.jpg" alt="">
+	            		<div class="overlay">
+                			<h2>PHONG CẢNH</h2>
+							<p><a href="#">XEM THÊM</a></p> 
+            			</div>
+			    	</div>
 				</div>
+
 				<div class="catelogy-gallery col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			    <div class="hovereffect">
-		        <img class="img-responsive" src="image/catelory_gallery_the_thao.jpg" alt="">
-	            <div class="overlay">
-                <h2>THỂ THAO</h2>
-								<p> 
-									<a href="#">XEM THÊM</a>
-								</p> 
-            </div>
-			    </div>
+			    	<div class="hovereffect">
+		        		<img class="img-responsive" src="image/catelory_gallery_the_thao.jpg" alt="">
+	            		<div class="overlay">
+                			<h2>THỂ THAO</h2>
+							<p><a href="#">XEM THÊM</a></p> 
+            			</div>
+			    	</div>
 				</div>
+
 				<div class="catelogy-gallery col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			    <div class="hovereffect">
-		        <img class="img-responsive" src="image/catelory_gallery_thoi_trang.jpg" alt="">
-	            <div class="overlay">
-                <h2>THỜI TRANG</h2>
-								<p> 
-									<a href="#">XEM THÊM</a>
-								</p> 
-            </div>
-			    </div>
+			    	<div class="hovereffect">
+		        		<img class="img-responsive" src="image/catelory_gallery_thoi_trang.jpg" alt="">
+	            		<div class="overlay">
+                			<h2>THỜI TRANG</h2>
+							<p><a href="#">XEM THÊM</a></p> 
+            			</div>
+			    	</div>
 				</div>
 			</div>
     	</div> <!-- Gallery - feature3 -->
