Sửa tên Malory thành TakePhoto

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-test
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,7 +22,7 @@ test
 						<span class="icon-bar"></span>		
 						<span class="icon-bar"></span>				
 					</button>
-					<a href="#" class="navbar-brand">Malory</a>				
+					<a href="#" class="navbar-brand">TakePhoto</a>				
 				</div>
 				<div class="header-other dropdown">
 					<div class="btn-group pull-right">
