--- a/index.html
+++ b/index.html
@@ -252,5 +252,7 @@
 
     <!-- javascript -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/custom.js"></script>
+
   </body>
 </html>
